plugins {
    id 'java'


    id 'jvm-test-suite'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

dependencies {
    implementation project(':code:libraries:array')
    implementation project(':code:libraries:btree')
    implementation project(':code:libraries:random-write-funnel')
    implementation project(':code:features-index:domain-ranking')
    implementation project(':code:features-index:index-query')
    implementation project(':code:features-index:index-journal')
    implementation project(':code:common:model')
    implementation project(':code:common:process')


    implementation libs.bundles.slf4j

    implementation libs.fastutil

    testImplementation libs.bundles.slf4j.test
    testImplementation libs.bundles.junit
    testImplementation libs.mockito
}

test {
    useJUnitPlatform()
}

task fastTests(type: Test) {
    useJUnitPlatform {
        excludeTags "slow"
    }
}
